Fix slider when on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,13 @@
 
 /*
 * Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
+/*
+* Prefixed by https://autoprefixer.github.io
 * PostCSS: v8.3.6,
 * Autoprefixer: v10.3.1
 * Browsers: last 4 version
@@ -399,17 +406,30 @@ section {
 
 /* Career Section */
 .career-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     height: 750px;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
 }
 
 .career-container__piece {
     width: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -423,9 +443,18 @@ section {
 
 #scrum-content {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 1.5rem;
 }
@@ -435,12 +464,19 @@ section {
 }
 
 #educator-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
 .grid-container {
+    display: -ms-grid;
     display: grid;
     grid-template-columns: repeat(
         auto-fill,
@@ -506,6 +542,7 @@ section {
     background: #f9f9f9;
     position: relative;
     border-radius: 4px;
+    -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -536,12 +573,15 @@ section {
     max-width: 800px;
     height: 500px;
     position: absolute;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
     transition: all 1s;
 }
 
 .slide img {
     width: 100%;
     height: 100%;
+    -o-object-fit: cover;
     object-fit: cover;
 }
 
@@ -552,10 +592,21 @@ section {
     position: absolute;
     top: 0;
     opacity: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: end;
+    -ms-flex-pack: end;
     justify-content: flex-end;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-transition: 0.5s ease;
+    -o-transition: 0.5s ease;
     transition: 0.5s ease;
     color: white;
 }
@@ -582,6 +633,8 @@ section {
 }
 
 .btn:active {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
     transform: scale(1.1);
 }
 
@@ -593,6 +646,10 @@ section {
 .btn-next {
     top: 45%;
     right: 2%;
+}
+
+.btn-view {
+    margin-top: 1rem;
 }
 
 /* career sections 
@@ -634,6 +691,7 @@ section {
     width: 90%;
     max-width: 50rem;
     padding: 1rem;
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
     font-size: 1.5rem;
 }
@@ -657,20 +715,33 @@ section {
 }
 
 .controls {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-column-gap: 1rem;
+    -moz-column-gap: 1rem;
     column-gap: 1rem;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
 }
 
 .control {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
     min-width: 10rem;
 }
 
 .actions {
     margin-top: 1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -692,6 +763,8 @@ section {
 }
 
 .controlError {
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
     flex: 1;
     min-width: 10rem;
     border: 2px solid #fe5f55 !important;
@@ -782,13 +855,24 @@ footer p {
     position: absolute;
     top: 50%; /* Move down by half of the viewport height */
     left: 50%; /* Move right by half of the viewport width */
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%); /* Adjust position to the exact center */
 }
 
 .modal-header {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -798,8 +882,15 @@ footer p {
 
 .modal-description {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -808,21 +899,37 @@ footer p {
 }
 
 .modal-header__skills {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     gap: 2rem;
 }
 
 .modal-feature {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin-top: 1.5rem;
 }
 
 .modal-actions {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     gap: 1rem;
 }
@@ -877,7 +984,12 @@ footer p {
 @media screen and (max-width: 800px) {
     .career-container {
         margin-top: 3rem;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
         gap: 2rem;
         height: 100%;
@@ -900,6 +1012,9 @@ footer p {
     }
 
     #scrum-master .career-container {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
         flex-direction: column-reverse;
     }
 
@@ -930,10 +1045,16 @@ footer p {
     }
 
     .controls {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
     }
 
     .actions {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
     }
 
